css/bootstrap-override.css
body {
	background: url(../img/bg.jpg) repeat-x #FFF;
	padding: 25px;
}

.container {
	width: 900px;
	max-width: 100%;
	box-shadow: 0 0 20px #888;
	padding-left: 0;
	padding-right: 0;
	background-color: #FFF;
	border-radius: 25px;
	overflow: hidden;
}

header[role="banner"] #logo-main {
	display: block;
	width: auto;
	height: auto;
	max-width: 100%;
}

#navbar-primary.navbar-default {
	border: 0;
	border-radius: 0;
	background-color: #244729;
	color: #FFF;
	margin-bottom: 0;
}

#navbar-primary.navbar-default .navbar-nav > li > a {
	color: inherit;
}

#navbar-primary.navbar-default .navbar-nav > li > a:hover {
	color: inherit;
}

#navbar-primary.navbar-default .navbar-nav > .active > a {
	background-color: transparent;
}

.navbar-header > a.navbar-brand {
	color: inherit;
}

.navbar-header > a.navbar-brand:hover {
	color: inherit;
}

.page-header {
	margin-top: 0;
}

.page-content {
	margin: 20px;
}

.page-content img {
	border: 1px solid #234729;
}

.page-content img.alignnone {
	margin: 5px 20px 20px 0;
}

.page-content a img.alignnone {
	margin: 5px 20px 20px 0;
}

.page-content img.aligncenter {
	display: block;
	margin: 5px auto 5px auto;
}

.page-content a img.aligncenter {
	display: block;
	margin-left: auto;
	margin-right: auto
}

.page-content img.alignleft {
	float: left;
	margin: 5px 20px 20px 0;
}

.page-content a img.alignleft {
	float: left;
	margin: 5px 20px 20px 0;
}

.page-content img.alignright {
	float:right;
	margin: 5px 0 20px 20px;
}

.page-content a img.alignright {
	float: right;
	margin: 5px 0 20px 20px;
}

form[role="form"] * {
	vertical-align: text-top;
}

label {
	white-space: nowrap;
}

.form-control {
	display: initial;
	width: 400px;
	max-width: 95%;
}

@keyframes blink {
0% {color: inherit;}
50% {color: rgba(0, 0, 0, 0);}
100% {color: inherit;}
}
@-webkit-keyframes blink {
0% {color: inherit;}
50% {color: rgba(0, 0, 0, 0);}
100% {color: inherit;}
}
@-moz-keyframes blink {
0% {color: inherit;}
50% {color: rgba(0, 0, 0, 0);}
100% {color: inherit;}
}
blink {
animation: blink 1s step-start 0s infinite;
-webkit-animation: blink 1s step-start 0s infinite;
-moz-animation: blink 1s step-start 0s infinite;
}

.footer {
    background-color: #244729;
    color: #fff;
	padding: 20px;
}

.footer address {
	margin-bottom: 0;
}

textarea {
    resize: none;
}

